--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,10 +2,9 @@
 title: Welcome to Middleman
 ---
 
-<div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
-
+<h1>POSTS</h1>
+<ol>
+  <% data.Post.Post.each do |id, partner| %>
+    <li><h2><%= partner["title"] %><h2></li>
+  <% end %>
+</ol>
