--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,7 +6,7 @@ title: Welcome to Middleman
 <ol>
   <% data.Post.Post.each do |id, partner| %>
     <li>
-	<% if !article.image.empty? %>
+	<% if !partner.image.empty? %>
 	  <%= image_tag partner.image.url, alt: 'logo', class: 'img-responsive' %>
 	<% end %>
 	<h2><%= partner["title"] %><h2>
