--- a/source/layouts/partials/_head.erb
+++ b/source/layouts/partials/_head.erb
@@ -5,12 +5,12 @@
 				<div class="menu-block-wrapper menu-block-5 menu-name-main-menu parent-mlid-0 menu-level-1">
 					<ul class="nav navbar-nav navbar-right">
 						<li><%= link_to("Why smartshift", "/") %></li>
-						<li><%= link_to("Our Solutions", "/solutions") %></li>
-						<li><%= link_to("How we work", "/how-we-work") %></li>
+						<li><%= link_to("Our Solutions", "/our-solution.html") %></li>
+						<li><%= link_to("How we work", "/how-we-work.html") %></li>
 						<li><%= link_to("About Us", "/about.html") %></li>
-						<li><%= link_to("Contact", "/contact") %></li>
+						<li><%= link_to("Contact", "/contact.html") %></li>
 						<li><%= link_to("Login", "https://smartshiftme.com/saasapp/login.jsp", :target => "_blank", :class => "boxlink") %></li>
-						<li id="callusbt" class="active"><a data-toggle="modal" data-target="#basicModal" class="boxlink2 GoogleAnalyticsET-processed" href="http://www.smartshifttech.com/#"> Request Call </a></li>
+						<li id="callusbt" class="active"><a data-toggle="modal" data-target="#basicModal" class="boxlink2" href="#"> Request Call </a></li>
 					</ul>
 				</div>
 			</div>
