--- a/source/layouts/partials/_footer.erb
+++ b/source/layouts/partials/_footer.erb
@@ -47,7 +47,7 @@
                                                 <div class="footer_title">Call us</div>							
                                                 <ul class="footer-navigation">
 													<% data.SmartShift.CallUs.each do |id, article| %>
-													<li><%= article["description"] %></li>
+													<li><%= article["descripion"] %></li>
 													<% end %>
                                                 </ul>
                                             </div>
