--- a/source/privacy.html.erb
+++ b/source/privacy.html.erb
@@ -1,14 +1,14 @@
 ---
-title: Our Solutions
+title: Privacy Policy
 layout: article
-link: solution
+link: privacy
 ---
 
 
 
 <div class="container-main">
 	<% data.SmartShift.Landing.each do |id, article| %>
-		<% if article.title == 'Our Solutions' %>
+		<% if article.title == 'Privacy Policy' %>
 			<div class="view-content">
 				<div class="views-row views-row-1 views-row-odd views-row-first views-row-last">
 					<div class="views-field views-field-nothing">        
