--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -16,7 +16,7 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "Enterprise Software Management and Consolidation | smartShift" %></title>
     
-    <%= stylesheet_link_tag "css1", "css2", "css3", "css4", "styles.css" %>
+    <%= stylesheet_link_tag "css1", "css2", "css3", "css4", "styles.css", "styles_about.css" %>
     <%= javascript_include_tag  "jquery-1.10.2.min", "js1", "js2", "js3", "js4", "js5", "js6" %>
   </head>
   
