--- a/source/our-solution.html.erb
+++ b/source/our-solution.html.erb
@@ -58,7 +58,32 @@ link: solution
 					</div>  
 				</div>
 			</div>
+			<div class="panel-pane pane-views pane-download-pdfs download-pdf-area clearfix">
+				<h4 class="pane-title">Download Case Studies</h4>
+				<div class="pane-content">
+					<div class="view view-download-pdfs view-id-download_pdfs view-display-id-block view-dom-id-f306a3c422041b25e0980955aa7d4254">
+						<div class="view-content">
+							<div class="views-row views-row-1 views-row-odd views-row-first col-md-4 col-sm-4 col-lg-4">
+								<div class="views-field views-field-nothing">        
+									<span class="field-content">
+										<a href="http://www.smartshifttech.com/system/files_force/Case%20Study_BMW_smartShift%20Technologies_2015.pdf?download=1" class="btn btn-success btn-block"><strong>BMW Case Study on Rapid Migrations <br><br></strong></a>
+									</span>  
+								</div>  
+							</div>
+							<div class="views-row views-row-2 views-row-even views-row-last col-md-4 col-sm-4 col-lg-4">
+								<div class="views-field views-field-nothing">        
+									<span class="field-content">
+										<a href="http://www.smartshifttech.com/system/files_force/Case%20Study%20Specialty%20Chemicals%20Company_smartShift%20Technologies_2015.pdf?download=1" class="btn btn-success btn-block"><strong>Specialty Chemicals Company Case Study on Automation-Driven Consolidation</strong></a>
+									</span>  
+								</div>  
+							</div>
+						</div>
+					</div>  
+				</div>
+			</div>			
 		<% end %>
 	<% end %>
+	<%= partial "/layouts/partials/become_part" %>	
+	<%= partial "/layouts/partials/keep_up_to_date" %>	
 	<%= partial "/layouts/partials/footer" %>	
 </div>
