--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,7 @@
     <title><%= current_page.data.title || "Enterprise Software Management and Consolidation | smartShift" %></title>
     
     <%= stylesheet_link_tag "css1", "css2", "css3", "css4", "styles.css" %>
-    <%= javascript_include_tag  "jquery-1.10.2.min", "js1", "js2", "js3", "js4", "js5", "js6" %>
+    <%= javascript_include_tag  "jquery-1.10.2.min", "js1", "contentful.min", "js2", "js3", "js4", "js5", "js6" %>
   </head>
   
   <body class="<%= page_classes %>">
